apps/base/nextcloud/database/nextcloud.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud-system
  labels:
    networking.tinyrack.net/isolation: enabled
