apps/base/nextcloud/database/nextcloud.database.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: database-nextcloud
  namespace: nextcloud-system
specs:
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: nextcloud-system
        cnpg.io/cluster: nextcloud-database-cluster
    ingress:
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: nextcloud-system
              app.kubernetes.io/name: nextcloud
        toPorts:
          - ports:
              - port: "5432"
                protocol: TCP
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: cnpg-system
        toPorts:
          - ports:
              - port: "8000"
                protocol: TCP
              - port: "9187"
                protocol: TCP
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: nextcloud-system
              cnpg.io/cluster: nextcloud-database-cluster
        toPorts:
          - ports:
              - port: "5432"
                protocol: TCP
              - port: "8000"
                protocol: TCP
    egress:
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: nextcloud-system
              cnpg.io/cluster: nextcloud-database-cluster
        toPorts:
          - ports:
              - port: "5432"
                protocol: TCP
              - port: "8000"
                protocol: TCP
      # Barman object storage backups go through internal Traefik (Garage S3).
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: traefik-system
              app.kubernetes.io/name: traefik
        toPorts:
          - ports:
              - port: "8443"
                protocol: TCP
